refactoring and avoid genetic overlap

--- a/src/main/webapp/css/aftxr.css
+++ b/src/main/webapp/css/aftxr.css
@@ -2,8 +2,11 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Abel', sans-serif;
+	/*
     background-image: url('../images/3840x2400.jpg');
     background-size: cover;
+	*/
+	background-color: black;
     color: #7C9697;
     overflow: hidden;
     font-size: 0.8em;
@@ -30,10 +33,12 @@ body {
 
 .panelLink div {
     color: #506060;
-    border: 1px solid #324343;
+    border-top: 1px solid rgba(100, 120, 123, .4);
     background-color: black;
-    text-align: center;
+    /* text-align: center; */
     bottom: 0px;
+    text-transform: uppercase;
+    font-size: 11px;
 }
 
 .panel {
@@ -160,8 +165,8 @@ and (min-width : 481px) {
     font-size: 30vw;
     font-weight: bold;
     padding-top: 0;
-    margin-top: -7vw;
-    color: #091916;
+    margin-top: 8vw;
+    color: rgba(170, 200, 210, .075);
     text-align: center;
     vertical-align: top;
     width: 100%;
@@ -282,4 +287,12 @@ a {
 a:hover {
     color: #aacccd;
     text-decoration: underline;
+}
+
+#code {
+    color: rgba(80, 90, 98, .4);
+    font-size: 6px;
+    position: absolute;
+    left: 24%;
+    text-align: left;
 }
